--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
 services:
   - type: web
     name: decommissioning-db-app
-    runtime: php
+    runtime: static  # 一旦静的サイトとして定義しつつ、PHPを動かす設定を試みます
     plan: free
+    # もし runtime: php がどうしても必要な場合は、以下のように startCommand を追加します
+    # runtime: php
+    # startCommand: apache2-foreground  # RenderのPHP環境で一般的な起動コマンド
     envVars:
       - key: DB_HOST
         sync: false
@@ -13,4 +16,4 @@ services:
       - key: DB_PASS
         sync: false
       - key: DB_PORT
-        value: 5432
+        value: "5432"
